# ferrichess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
crates/ferrichess-config/: Cargo.toml
crates/ferrichess-config/src/: lib.rs
crates/ferrichess-games/: Cargo.toml
crates/ferrichess-games/src/: lib.rs  pgn.rs  stats.rs
crates/ferrichess-study/: Cargo.toml  README.md
crates/ferrichess-study/src/: diagnostics.rs  domain.rs  lib.rs  test_support.rs
crates/ferrichess-study/src/course/: documents.rs  metadata.rs  mod.rs
crates/ferrichess-study/src/pgn/: mod.rs  writer.rs
crates/ferrichess-study/src/raw/: comments.rs  mod.rs  parser.rs  scanner.rs
crates/ferrichess-study/src/tree/: builder.rs  merge.rs  mod.rs  model.rs  policy.rs
docs/: test-data-provenance.md
repertoires/: sielecki-kis-1e4-2.0-lichess.json
tools/ferrichess/: Cargo.toml  README.md
tools/ferrichess-archive/: Cargo.toml  README.md
tools/ferrichess-archive/src/: chesscom.rs  database.rs  engine.rs  http.rs  lichess.rs  main.rs  model.rs  position.rs  research.rs
tools/ferrichess-course-merge/: Cargo.toml  README.md
tools/ferrichess-course-merge/src/: main.rs
tools/ferrichess-pgn-index/: Cargo.toml  README.md
tools/ferrichess-pgn-index/src/: database.rs  lib.rs  main.rs  pgn.rs
tools/ferrichess/src/: main.rs  publish.rs
