[package]
name = "ferrichess-study"
version = "0.1.0"
edition = "2024"
description = "Parse compact chess study text into validated move trees and deterministic PGN"
readme = "README.md"
documentation = "https://docs.rs/ferrichess-study"
keywords = ["chess", "pgn", "study", "parser"]
categories = ["games", "parser-implementations"]
include = ["/Cargo.toml", "/README.md", "/src/**"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shakmaty = "0.30.1"
