[package]
name = "ferrichess-course-merge"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ferrichess-config = { path = "../../crates/ferrichess-config" }
ferrichess-pgn-index = { path = "../ferrichess-pgn-index" }
ferrichess-study = { path = "../../crates/ferrichess-study" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.30.1"
