[package]
name = "ferrichess-pgn-index"
version = "0.1.0"
edition = "2024"
description = "Build and query course-specific FEN indexes from annotated PGN"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
pgn-reader = "0.29.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.149"
shakmaty = "0.30.1"
